@@ -65,7 +65,7 @@ public class SimilarItems {
 
   private class SimilarItemsIterator extends UnmodifiableIterator<SimilarItem> {
 
-    private int index = 0;
+    private int index = -1;
 
     @Override
     public boolean hasNext() {
